Post component for page/post templates

--- a/src/services.html
+++ b/src/services.html
@@ -7,6 +7,27 @@
 <body data-bs-spy="scroll"  class="page" data-bs-target="#list-example" data-bs-smooth-scroll="true" class="scrollspy-example" tabindex="0">
 
 	@@include('sections/about-me/navigation.html')
+
+	<section  data-v-component-post>
+		
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-12">
+					<div>
+						<h1 class="text-center my-5" data-v-post-name>Page title</h1>
+						
+						<div class="my-5" data-v-post-content>
+							<h2>Vivamus sed nunc in arcu cursus mollis quis et orci. Interdum et malesuada</h2>
+							<p>Mauris viverra cursus ante laoreet eleifend. Donec vel fringilla ante. Aenean finibus velit id urna vehicula, nec maximus est sollicitudin. Praesent at tempus lectus, eleifend blandit felis. Fusce augue arcu, consequat a nisl aliquet, consectetur elementum turpis. Donec iaculis lobortis nisl, et viverra risus imperdiet eu. Etiam mollis posuere elit non sagittis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis arcu a magna sodales venenatis. Integer non diam sit amet magna luctus mollis ac eu nisi. In accumsan tellus ut dapibus blandit.</p>
+						</div>
+					
+					</div>
+				</div>
+			</div>
+		</div>
+		
+	</section>
+	
 	@@include('sections/about-me/my-service.html')
 	@@include('sections/about-me/footer.html')
 
