--- a/pricing.html
+++ b/pricing.html
@@ -137,45 +137,27 @@
 	</nav>
 </section>
 
-	<section class="py-lg-18 py-md-10 py-8" id="aboutme">
-	<div class="container">
-		<!--row-->
-		<div class="row d-flex align-items-center">
-			<div class="col-xl-5  col-md-6 col-lg-6 col-12">
-				<div class="p-3 mb-5 mb-md-0">
-					<!--image-->
-					<div class="position-relative">
-						<img src="./images/img-2.jpg" alt="about"
-							class="img-fluid position-relative z-1 rounded-4 ms-lg-5 ms-3 ms-md-4">
-						<div class="position-absolute top-0 mt-1">
-							<img src="./images/square.svg" alt="square" class="img-fluid ">
+	
+	<section  data-v-component-post>
+		
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-12">
+					<div>
+						<h1 class="text-center my-5" data-v-post-name>Pricing</h1>
+						
+						<div class="my-5" data-v-post-content>
+							<h2>Vivamus sed nunc in arcu cursus mollis quis et orci. Interdum et malesuada</h2>
+							<p>Mauris viverra cursus ante laoreet eleifend. Donec vel fringilla ante. Aenean finibus velit id urna vehicula, nec maximus est sollicitudin. Praesent at tempus lectus, eleifend blandit felis. Fusce augue arcu, consequat a nisl aliquet, consectetur elementum turpis. Donec iaculis lobortis nisl, et viverra risus imperdiet eu. Etiam mollis posuere elit non sagittis. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc quis arcu a magna sodales venenatis. Integer non diam sit amet magna luctus mollis ac eu nisi. In accumsan tellus ut dapibus blandit.</p>
 						</div>
+					
 					</div>
-					<!--image-->
-				</div>
-			</div>
-			<!--col-->
-			<div class="col-xl-6 offset-xl-1  col-md-5 offset-md-1 col-lg-5 offset-lg-1 col-12">
-				<div class="">
-					<!--text-->
-					<!--title-->
-					<h2 class="mb-5">
-						About <span class="text-primary">Me</span>
-					</h2>
-					<p>There are many variations of passages ofLorem Ipsum
-						available, but the majority havesuffered alteration in some
-						form, by injected humour,</p>
-					<p class="mb-6">Passages ofLorem Ipsumavailable, but the majority havesuffered
-						alteration in some form, by injected humour,</p>
-
-					<a href="/page/contact" class="btn btn-primary">Contact Us</a>
-					<!--text-->
 				</div>
 			</div>
 		</div>
-	</div>
-</section>
-
+		
+	</section>
+	
 	<footer class="py-5" id="footer" data-v-save-global="index.html,#footer">
 	<div class="container">
 		<div class="row">
@@ -224,5 +206,4 @@
 </body>
 
 </html>
-
 
