--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AboutMe. - Personal Portfolio Website Template</title>
+    <title>AboutMe. - Sadick Gondo portfolio</title>
     <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;800;900&display=swap" rel="stylesheet">
  
     <link rel="stylesheet" href="css/style.css">
